// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DashboardCardBody /> renders Card body correctly 1`] = `
<CardBody
  className=""
>
  content
</CardBody>
`;

exports[`<DashboardCardBody /> renders Loading card body correctly 1`] = `
<CardBody
  className=""
>
  <Loading
    text="Loading"
  />
</CardBody>
`;
